--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: keymap
 description: a reusable keymap widget
 version: 0.0.1
-#homepage:
+homepage: https://github.com/pmutisya/keymap
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
