--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  flutter_markdown: ^0.6.10
+  flutter_markdown: ^0.6.10+2
   flutter:
     sdk: flutter
 
